--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -1,11 +1,20 @@
+@import 'normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+
 * {
-  box-sizing: border-box;
+  box-sizing: inherit;
   margin: 0;
 }
 
+html {
+  font-size: 62.5%;
+  list-style: 1.2rem;
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
-  font-size: 12px;
-  
+  box-sizing: border-box;
 }
 
 a {
