--- a/src/layouts/components/MobileHeader/MobileHeader.module.scss
+++ b/src/layouts/components/MobileHeader/MobileHeader.module.scss
@@ -23,7 +23,7 @@
   z-index: 900;
 }
 
-.nav-icon {
+.nav-icon, .nav-icon-x {
   width: 60px;
   height: 45px;
   position: fixed;
@@ -45,6 +45,7 @@
     opacity: 1;
     left: 0;
     transform: rotate(0);
+    transition: 0.2s ease-in-out;
   }
 }
 
@@ -58,6 +59,75 @@
 
 .nav-icon span:nth-child(4) {
   top: 36px;
+}
+
+.nav-icon-x span:nth-child(1) {
+  top: 0;
+  display: none;
+}
+
+.nav-icon-x span:nth-child(2), .nav-icon-x span:nth-child(3) {
+  top: 18px;
+}
+
+.nav-icon-x span:nth-child(2) {
+  transform: rotate(45deg);
+}
+
+.nav-icon-x span:nth-child(3) {
+  transform: rotate(-45deg);
+}
+
+.nav-icon-x span:nth-child(4) {
+  display: none;
+  top: 36px;
+}
+
+.full-menu {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-image: linear-gradient(270deg,#2dc8f3 0,#1497e2 100%);
+  transition: all 0.2s ease-out;
+  z-index: 900;
+
+  ul {
+    position: relative;
+    top: 50%;
+    height: 60%;
+    font-size: 34px;
+    transform: translateY(50%);
+    color: #fff;
+
+    li {
+      height: 60px;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.nav-icon-x ~ .full-menu {
+  display: block;
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media(max-width: 1023px) {
